--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: ["yarn", "echo", "--force"]
+    # command: ["yarn", "echo", "--force"]
     container_name: ${APP_NAME}_app
     volumes:
       - ./:/var/www/html
